Lesson 2: encode / decode.

--- a/src/lesson_2/task1/index.html
+++ b/src/lesson_2/task1/index.html
@@ -12,6 +12,6 @@
   <main class='Container'>
   </main>
 </body>
-<script type="module" src='./task.js'></script>
-<script type="module" src='../../utils/canvas.js'></script>
+<script type="module" src='../../../dist/lesson_2/task1/task.js'></script>
+<script type="module" src='../../../dist/utils/canvas.js'></script>
 </html>
