--- a/src/lessons/lesson_2/task1/index.html
+++ b/src/lessons/lesson_2/task1/index.html
@@ -6,12 +6,12 @@
         content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
   <meta http-equiv='X-UA-Compatible' content='ie=edge'>
   <title>inverse pixel</title>
-  <link rel='stylesheet' href='./styles.css'>
+  <link rel='stylesheet' href='styles.css'>
 </head>
 <body>
   <main class='Container'>
   </main>
 </body>
-<script type="module" src='../../../dist/lesson_2/task1/task.js'></script>
-<script type="module" src='../../../dist/utils/canvas.js'></script>
+<script type="module" src='../../../../dist/lesson_2/task1/task.js'></script>
+<script type="module" src='../../../../dist/utils/canvas.js'></script>
 </html>
